# universe

./: .env.template  .gitignore  .readthedocs.yaml  LICENSE  Makefile  pyproject.toml
.github/workflows/: sphinx.yml
docs/: Makefile
docs/source/: conf.py  index.rst
src/universe/: __init__.py  body.py  ellipsoid.py  main.py  point.py  sphere.py
