[tool.poetry]
name = "universe"
version = "0.1.0"
description = "Model of universe"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://teratron.github.io/universe"
repository = "https://github.com/teratron/universe"
documentation = "https://teratron.github.io/universe/docs"
keywords = ["universe", "space", "star", "planet"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
packages = [{ include = "src/universe" }]

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
python = "^3.10"
poetry = "^1.3.0"
requests = "^2.28.1"
setuptools = "^65.6.3"
mypy = "^0.991"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
my-script = "pynn:src/universe/universe.py"

[tool.mypy]
path = "src/universe"
ignore_missing_imports = "true"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
